--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
+    "chai": "^4.2.0",
     "sass": "^1.21.0",
     "vue-template-compiler": "^2.6.10"
   },
   "alias": {
-    "vue" : "./node_modules/vue/dist/vue.common.js"
+    "vue": "./node_modules/vue/dist/vue.common.js"
   }
 }
