mock chai.spy模拟click回调事件的调用

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "leohai",
   "license": "MIT",
   "dependencies": {
+    "chai-spies": "^1.0.0",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.3"
   },
