--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "这是一个基于vue 的ui框架",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./test.js"
   },
   "keywords": [
     "vue"
