--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gulu-hai",
+  "name": "gulu-hai-test",
   "version": "0.0.1",
   "description": "这是一个基于vue 的ui框架",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
@@ -27,6 +27,7 @@
     "karma-mocha": "^1.3.0",
     "karma-sinon-chai": "^2.0.2",
     "mocha": "^6.1.4",
+    "parcel": "^1.12.3",
     "sass": "^1.21.0",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
